# desafio-explorando-ia-generativa-pipeline-etl-python

./: .gitignore  comandos.txt  pyproject.toml
data/: users_api_mock.csv
src/fundamentos-etl/: Untitled.ipynb
