[project]
name = "introducao-bootcamp-analise-de-dados"
version = "0.1.0"
description = ""
authors = [
    {name = "david"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.1.0,<27.0.0",
    "djlint>=1.36.4,<2.0.0",
    "ipykernel>=7.2.0",
    "notebook>=7.5.4",
]

[tool.uv]
package = false

